--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "node node_modules/types-publisher/bin/tester/test.js --runFromDefinitelyTyped"
   },
   "devDependencies": {
-    "types-publisher": "Microsoft/types-publisher#tester",
+    "types-publisher": "Microsoft/types-publisher#production",
     "typescript": "2.0.7"
   }
 }
