--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">= 6.9.1"
   },
   "scripts": {
-    "test": "node node_modules/types-publisher/bin/tester/test.js --run-from-definitely-typed --nProcesses 16"
+    "test": "node node_modules/types-publisher/bin/tester/test.js --run-from-definitely-typed"
   },
   "devDependencies": {
     "types-publisher": "Microsoft/types-publisher#production"
